# fraud_detect

./: .gitignore  config.py  fraud-detection-system.md  main.py  pyproject.toml  streamlit_app.py
config/: config.yaml
model/: inference.py  train_and_save_models.py
models/: feature_config.json
utils/: data_processor.py  feature_analysis.py  feature_engineering.py
